--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
-    "webfontloader": "^1.6.28",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-icons": "^3.9.0",
-    "react-copy-to-clipboard": "^5.0.2"
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
