--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Tinu.be",
-  "version": "0.1.0",
+  "version": "1.0.0-beta",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
