--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.4-beta",
   "private": true,
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "react-copy-to-clipboard": "^5.0.2",
