--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "Tinu.be",
-  "version": "1.1.0",
+  "name": "tinu-be",
+  "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.2.3",
+    "@sentry/tracing": "^6.2.3",
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
